--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 			padding: 0;
 			font-family: 'Open Sans Condensed', sans-serif;
 			text-align: center;
-			color: #A22E10;
+			color: #251F1E;
+		}
+
+		h1, article p {
+			text-shadow: 0px 1px 1px rgba(207, 189, 189, 0.14);
 		}
 
 		body {
@@ -31,8 +35,12 @@
 			line-height: 512px;
 			font-size: 48px;
 			margin: 16px;
-			border: dashed 4px #A22E10;
+			border: dashed 4px #251F1E;
 			font-weight: bold;
+		}
+
+		footer {
+			color: #fff;
 		}
 
 	</style>
