--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			padding: 0;
 			font-family: 'Open Sans Condensed', sans-serif;
 			text-align: center;
-			color: #251F1E;
+			color: #1D1919;
 		}
 
 		h1, article p {
@@ -35,7 +35,7 @@
 			line-height: 512px;
 			font-size: 48px;
 			margin: 16px;
-			border: dashed 4px #251F1E;
+			border: dashed 4px #1D1919;
 			font-weight: bold;
 		}
 
